--- a/package.json
+++ b/package.json
@@ -74,11 +74,13 @@
 		]
 	},
 	"dependencies": {
+		"bootstrap": "^5.3.3",
 		"bootstrap-icons": "^1.11.3",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.54.2",
 		"react-polyfills": "0.0.1",
 		"react-router": "^6.0.2",
 		"react-router-dom": "^6.4.3"
